--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!doctype html>
 <html lang="en">
+<head>
+  <style type="text/css">
+    * { margin: 0; padding: 0; }
+
+    h1 {
+      font: 40px/60px helvetica, arial, verdana;
+      height: 60px;
+      left: 100px;
+      margin-top: -30px;
+      position: absolute;
+      top: 25%;
+    }
+
+    h1 a {
+      color: #3063c3;
+    }
+  </style>
+</head>
 <body>
-  <p>
-    rfletcher.github.com
-  </p>
+  <h1><a href="http://github.com/rfletcher">rfletcher</a>.github.com</h1>
 </body>
 </html>
