Protocol relative links

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
   <h1>Rick Fletcher</h1>
 
   <ul>
-    <li>Code hosted by <a href="http://www.github.com/rfletcher" rel="me">GitHub</a></li>
-    <li>Music logged with <a href="http://www.last.fm/user/fletch" rel="me">Last.fm</a></li>
-    <li>Employment summarized at <a href="http://www.linkedin.com/in/rfletcher" rel="me">LinkedIn</a></li>
+    <li>Code hosted by <a href="//www.github.com/rfletcher" rel="me">GitHub</a></li>
+    <li>Music logged with <a href="//www.last.fm/user/fletch" rel="me">Last.fm</a></li>
+    <li>Employment summarized at <a href="//www.linkedin.com/in/rfletcher" rel="me">LinkedIn</a></li>
     <li>Time wasted on
-      <a href="http://www.twitter.com/fletch" rel="me">Twitter</a>,
-      <a href="http://www.instagram.com/fletch" rel="me">Instagram</a>, and
-      <a href="http://www.facebook.com/fletch" rel="me">Facebook</a>
+      <a href="//www.twitter.com/fletch" rel="me">Twitter</a>,
+      <a href="//www.instagram.com/fletch" rel="me">Instagram</a>, and
+      <a href="//www.facebook.com/fletch" rel="me">Facebook</a>
     </li>
   </ul>
 </body>
