Remove Facebook link

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
     <li>Music logged with <a href="//www.last.fm/user/fletch" rel="me">Last.fm</a></li>
     <li>Employment summarized at <a href="//www.linkedin.com/in/rfletcher" rel="me">LinkedIn</a></li>
     <li>Time wasted on
-      <a href="//www.twitter.com/fletch" rel="me">Twitter</a>,
-      <a href="//www.instagram.com/fletch" rel="me">Instagram</a>, and
-      <a href="//www.facebook.com/fletch" rel="me">Facebook</a>
+      <a href="//www.twitter.com/fletch" rel="me">Twitter</a> and
+      <a href="//www.instagram.com/fletch" rel="me">Instagram</a>
     </li>
   </ul>
 </body>
