Adjust font size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     * {
       font-family: inconsolata, monospace;
-      font-size:   12px;
+      font-size:   1em;
       font-weight: normal;
       line-height: 1.4em;
       margin:      0;
@@ -17,6 +17,7 @@
     }
 
     body {
+      font-size:   0.95em;
       height:      8em;
       left:        50%;
       margin-left: -18ch;
