--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
     * {
-      font-family: inconsolata, monospace;
+      font-family: "SF mono", menlo, inconsolata, inconsolata-dz, monospace;
       font-size:   1em;
       font-weight: normal;
       line-height: 1.4em;
@@ -17,7 +17,7 @@
     }
 
     body {
-      font-size:   0.95em;
+      font-size:   0.75em;
       height:      8em;
       left:        50%;
       margin-left: -18ch;
