--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
   <h1>Rick Fletcher</h1>
 
   <ul>
-    <li>Code hosted by <a href="//www.github.com/rfletcher" rel="me">GitHub</a></li>
-    <li>Music logged with <a href="//www.last.fm/user/fletch" rel="me">Last.fm</a></li>
-    <li>Employment summarized at <a href="//www.linkedin.com/in/rfletcher" rel="me">LinkedIn</a></li>
+    <li>Code hosted by <a href="https://www.github.com/rfletcher" rel="me">GitHub</a></li>
+    <li>Music logged with <a href="https://www.last.fm/user/fletch" rel="me">Last.fm</a></li>
+    <li>Employment summarized at <a href="https://www.linkedin.com/in/rfletcher" rel="me">LinkedIn</a></li>
     <li>Time wasted on
-      <a href="//www.twitter.com/fletch" rel="me">Twitter</a> and
-      <a href="//www.instagram.com/fletch" rel="me">Instagram</a>
+      <a href="https://www.twitter.com/fletch" rel="me">Twitter</a> and
+      <a href="https://www.instagram.com/fletch" rel="me">Instagram</a>
     </li>
   </ul>
 </body>
