--- a/test.html
+++ b/test.html
@@ -4,8 +4,11 @@ Cookies:
 <dl></dl>
 <script>
   const getCookies = async function() {
+    var dl = document.getElementsByTagName("dl")[0];
+
     const response = await fetch('https://ap.lijit.com/readerinfo?loc=sovrn.com', {credentials: "include"});
     const response_obj = await response.json();
+
     dl.innerHTML = JSON.stringify(response_obj);
   }
 
