--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@ Cookies:
 
     dd = document.createElement('dd');
     dd.appendChild(document.createTextNode(value));
-    dd.appendChild(dd);
+    dl.appendChild(dd);
   }
   
   getCookies();
