--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </ul>
 
     <footer>
-      Look! It's <a href="markdown.css.html">Markdown.css</a>
+      Look! It's <a href="/projects/markdown.css">Markdown.css</a>.
     </footer>
   </main>
 </body>
