Remove linkedin, link to projects from the main list

--- a/index.html
+++ b/index.html
@@ -23,18 +23,17 @@
         Music logged with <a href="https://www.last.fm/user/fletch" rel="me">Last.fm</a>,
         movies on&nbsp;<a href="https://letterboxd.com/rfletcher" rel="me">Letterboxd</a>
       </li>
-      <li>Employment summarized
-        at&nbsp;<a href="https://www.linkedin.com/in/rfletcher" rel="me">LinkedIn</a>
-      </li>
       <li>Time wasted on
         <a href="https://www.twitter.com/fletch" rel="me">Twitter</a>
         and&nbsp;<a href="https://www.instagram.com/fletch" rel="me">Instagram</a>
       </li>
+      <li>
+        Some personal <a href="/projects">projects</a> live here, too.
+      </li>
     </ul>
   </main>
   <footer>
-    Look! It's <a href="/projects/markdown.css">Markdown.css</a>. (And other
-    <a href="/projects">projects</a>.)
+    Look! It's <a href="/projects/markdown.css">Markdown.css</a>.
   </footer>
 </body>
 </html>
