--- a/markdown.css.html
+++ b/markdown.css.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- <meta http-equiv="refresh" content="0; url=https://flet.ch/projects/markdown.css" /> -->
 
-  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="assets/css/global.css" />
 </head>
 <body>
   <p>
