Final resume print layout

--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,7 @@
 
     <address>
       <script>wa("PGEgaHJlZj0ibWFpbHRvOnJmb"+"GV0Y2hlckBwb2JveC5jb20iIGNsYX"+"NzPSJlbWFpbCI+cmZsZXRjaGVyQHBvYm94LmNvbTwvYT4");</script>
-      <a href="https://duckduckgo.com/?t=ffab&q=montgomery+county%2C+pa&ia=web&iax=images&iaxm=maps" class="location">Pennsylvania, US</a>
+      <a href="https://duckduckgo.com/?t=ffab&q=montgomery+county%2C+pa&ia=web&iax=images&iaxm=maps" class="location for-screen">Pennsylvania, US</a>
       <script>wa("PGEgaHJlZj0idGVsOisxMjE1Mz"+"YwMzM2NiIgY2xhc3M9InBob25lIGZ"+"vci1wcmludCI+MjE1LTM2MC0zMzY2PC9hPg");</script>
       <a href="https://flet.ch/resume" class="link for-print">flet.ch/resume</a>
     </address>
@@ -152,18 +152,9 @@
         <ul>
           <li>
             Formalized infrastructure management with a configuration-as-code
-            approach using Terraform and Puppet; imported all existing
-            infrastructure; empowered software engineers to manage their own environments
-          </li>
-          <li>
-            Partnered with engineering teams to instill availability,
-            scalability, security, and cost considerations as standard practice
-            throughout the software development lifecycle
-          </li>
-          <li>
-            Collaborated with application engineering on a transition from a
-            monolithic application to a microservice model; designed and built
-            infrastructure to support those microservices
+            approach using Terraform and Puppet;
+            <span class="for-screen">imported all existing infrastructure;</span>
+            empowered software engineers to manage their own environments
           </li>
           <li>
             Implemented systems monitoring and alerting; investigated and
@@ -171,9 +162,19 @@
             performed forensics and remediated security incidents (DFIR)
           </li>
           <li>
+            Partnered with engineering teams to instill availability,
+            scalability, security, and cost considerations as standard practice
+            throughout the software development lifecycle
+          </li>
+          <li class="for-screen">
             Designed a system for securely retrieving secrets from central
             storage; migrated all applications from various methods of
             secrets management to that single centralized system
+          </li>
+          <li>
+            Collaborated with application engineering on a transition from a
+            monolithic application to a microservice model; designed and built
+            infrastructure to support those microservices
           </li>
           <li>
             Analyzed AWS spending and implemented changes which reduced monthly
@@ -208,7 +209,7 @@
             <li class="expert"><a href="https://httpd.apache.org">Apache</a></li>
             <li class="expert"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a></li>
             <li><a href="https://www.mysql.com">MySQL</a></li>
-            <li><a href="https://www.php.net">PHP</a></li>
+            <li class="for-screen"><a href="https://www.php.net">PHP</a></li>
             <li class="expert"><a href="https://rubyonrails.org">Ruby/Rails</a></li>
             <li class="expert"><a href="https://www.ubuntu.com">Ubuntu</a></li>
             <li><a href="https://www.selenium.dev/documentation/en/webdriver/">WebDriver</a></li>
@@ -217,15 +218,15 @@
 
         <ul>
           <li>
-            Developed the VigLink javascript library &mdash; the primary point
-            of integration between VigLink and its 300k customer web sites
+            Developed the VigLink javascript library, ultimately deployed to
+            300k customer web sites
           </li>
           <li>
             Built a fully automated javascript testing toolkit, allowing
             continuous validation of a large test suite across multiple
             browsers and operating systems
           </li>
-          <li>
+          <li class="for-screen">
             Wrote plug-ins to easily enable VigLink on various forum and blog
             platforms, including WordPress and vBulletin; developed a secure
             auto-update process
@@ -236,17 +237,13 @@
           </li>
           <li>
             Designed, developed, and maintained various internal and external
-            web applications, including:
-            <ul>
+            web applications, including: <span class="for-print">the corporate
+            marketing site; a customer portal and dashboard; internal
+            administration tools</span>
+            <ul class="for-screen">
               <li>The marketing site at www.viglink.com</li>
-              <li>
-                A customer-facing dashboard, including analytics, account
-                configuration, and product documentation
-              </li>
-              <li>
-                Internal administration tools for managing users and processes,
-                running reports, etc.
-              </li>
+              <li>A customer-facing dashboard, including analytics, account configuration, and product documentation</li>
+              <li>Internal administration tools for managing users and processes, running reports, etc.</li>
             </ul>
           </li>
         </ul>
