More resume tweaks

--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,7 @@
     </address>
 
     <p class="intro">
-      Technical leader with a focus on highly available, scalable cloud
+      Technical leader with a focus on highly-available, scalable cloud
       infrastructure. Strong interests in security, automation, simplification,
       and peer mentoring.
     </p>
@@ -44,7 +44,7 @@
       </li>
       <li>
         Deeply experienced with web technologies at every layer, built upon a
-        history of applications &amp; reliability engineering
+        history of software &amp; reliability engineering
       </li>
       <li>
         Skilled communicator, dedicated collaborator and mentor, lifelong learner
@@ -103,16 +103,17 @@
           <li>
             Integrated VigLink and Sovrn infrastructure, post acquisition;
             fully transitioned ownership of VigLink production systems and
-            infrastructure to the application engineering team </li>
+            infrastructure to the applications engineering team
+          </li>
           <li>
-            Evaluated emerging technologies for suitability in our
-            organization; made recommendations and worked side-by-side with
-            engineering teams through adoption
+            Evaluated emerging technologies for suitability in the Sovrn
+            engineering organization; made recommendations and worked
+            side-by-side with engineering teams through adoption
           </li>
           <li>
             Designed and built a complete multi-branch development environment
             in Kubernetes (EKS), including CI/CD with automated Kubernetes
-            configuration and garbage collection
+            provisioning and garbage collection
           </li>
           <li>
             Migrated legacy applications and workflows to containers, first
@@ -154,7 +155,7 @@
             Formalized infrastructure management with a configuration-as-code
             approach using Terraform and Puppet;
             <span class="for-screen">imported all existing infrastructure;</span>
-            empowered software engineers to manage their own environments
+            empowered software engineers to fully manage their own environments
           </li>
           <li>
             Implemented systems monitoring and alerting; investigated and
@@ -169,11 +170,11 @@
           <li class="for-screen">
             Designed a system for securely retrieving secrets from central
             storage; migrated all applications from various methods of
-            secrets management to that single centralized system
+            secrets management to that centralized system
           </li>
           <li>
-            Collaborated with application engineering on a transition from a
-            monolithic application to a microservice model; designed and built
+            Collaborated with applications engineering to transition a
+            monolithic application to microservices; designed and built
             infrastructure to support those microservices
           </li>
           <li>
@@ -227,13 +228,14 @@
             browsers and operating systems
           </li>
           <li class="for-screen">
-            Wrote plug-ins to easily enable VigLink on various forum and blog
-            platforms, including WordPress and vBulletin; developed a secure
-            auto-update process
+            Wrote plug-ins to enable VigLink on various popular forum and blog
+            platforms, including WordPress and vBulletin; developed the first
+            secure plugin auto-update process for each
           </li>
           <li>
             Worked directly with customers to integrate VigLink into their
-            applications; captured feedback on possible improvements
+            products; captured feedback on possible improvements for future
+            consideration
           </li>
           <li>
             Designed, developed, and maintained various internal and external
@@ -337,14 +339,14 @@
         </header>
 
         <ul>
-          <li>Managed a highly productive team of 6 application engineers</li>
+          <li>Managed a highly productive team of 6 applications engineers</li>
           <li>
             Lead a transition of the entire product/engineering organization
             from a waterfall development process to an iterative, Agile process
           </li>
           <li>
             Collaborated with various stakeholders on an ongoing basis to set
-            short- and long-term priorities
+            short- and long-term&nbsp;priorities
           </li>
         </ul>
       </section>
@@ -373,17 +375,16 @@
 
         <ul>
           <li>
-            Built and maintained multiple specialized versions of a
-            digital-rights management application, tailored to different
-            audiences
+            Built and maintained multiple specialized versions of a digital
+            music rights management application, tailored to different audiences
           </li>
           <li>
             Worked with product managers, designers, and external partners to
             build an embedded music store for the web
           </li>
           <li>
-            Worked with customers to integrate SNOCAP music stores into their
-            web sites; captured feedback on possible improvements
+            Provided support to customers integrating SNOCAP music stores into
+            their web sites; solicited product feedback
           </li>
         </ul>
       </section>
@@ -439,6 +440,10 @@
           <li>
             Managed of a cluster of web servers (configured software, applied
             security patches, etc.)
+          </li>
+          <li>
+            Adapted a popular open source CMS project for use as a customer
+            support forum
           </li>
         </ul>
       </section>
