Link to Mastodon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
   <link rel="canonical" href="https://flet.ch" />
   <link rel="stylesheet" href="assets/css/global.css" />
+
+  <style>
+    a[href*="twitter.com"] {
+      text-decoration: line-through;
+    }
+  </style>
 </head>
 <body class="sparse">
   <main>
@@ -22,7 +28,8 @@
         movies on&nbsp;<a href="https://letterboxd.com/rfletcher" rel="me">Letterboxd</a>
       </li>
       <li>Time wasted on
-        <a href="https://www.twitter.com/fletch" rel="me">Twitter</a>
+        <a href="https://www.twitter.com/fletch" rel="me">Twitter</a>,
+        <a href="https://mastodon.social/@fletch" rel="me">Mastodon</a>,
         and&nbsp;<a href="https://www.instagram.com/fletch" rel="me">Instagram</a>
       </li>
       <li>
