Make it clearer that projects are not active

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         and&nbsp;<a href="https://www.instagram.com/fletch" rel="me">Instagram</a>
       </li>
       <li>
-        Some personal <a href="/projects">projects</a> live here, too.
+        Some old personal <a href="/projects">projects</a> live here, too.
       </li>
     </ul>
   </main>
