--- a/projects/index.html
+++ b/projects/index.html
@@ -54,8 +54,8 @@
     <hr/>
 
     <p class="footnote">
-      This project is very old, and no longer maintained. It would need some
-      love to be useful&nbsp;again.
+      This project is very old, and at least partially broken. It would need
+      some love to be useful&nbsp;again.
     </p>
   </main>
 </body>
