Little updates; Bluesky link

--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
         Music logged with <a href="https://www.last.fm/user/fletch" rel="me">Last.fm</a>,
         movies on&nbsp;<a href="https://letterboxd.com/rfletcher" rel="me">Letterboxd</a>
       </li>
-      <li>Time wasted on
-        <a href="https://www.twitter.com/fletch" rel="me">Twitter</a>,
-        <a href="https://mastodon.social/@fletch" rel="me">Mastodon</a>,
-        and&nbsp;<a href="https://www.instagram.com/fletch" rel="me">Instagram</a>
+      <li>
+        Time wasted on
+        <a href="https://mastodon.social/@fletch" rel="me">Mastodon</a>
+        &hellip;but not so much on
+        <a href="https://bsky.app/profile/flet.ch" rel="me">Bluesky</a>,
+        <a href="https://www.instagram.com/fletch" rel="me">Instagram</a>/<a href="https://www.threads.net/@fletch">Threads</a>,
+        or <a href="https://www.twitter.com/fletch" rel="me" onclick="return false">Twitter</a>.
       </li>
       <li>
-        Some old personal <a href="/projects">projects</a> live here, too.
+        Some personal <a href="/projects">projects</a> live here, too
       </li>
     </ul>
   </main>
