--- a/projects/index.html
+++ b/projects/index.html
@@ -28,7 +28,7 @@
     <dl>
       <dt><a href="/projects/markdown.css">Markdown.css</a></dt>
       <dd>
-        Write HTML, style it as&nbsp;Markdown.
+        Write HTML, display it as&nbsp;Markdown.
       </dd>
 
       <dt class="stale"><a href="https://github.com/rfletcher/plex-mlb">Plex-MLB</a></dt>
@@ -45,9 +45,9 @@
 
       <dt><a href="https://github.com/rfletcher/tagbox">TagBox</a></dt>
       <dd>
-        A mult-value HTML text input. I'm happy to say that the
+        A multi-value HTML text input. I'm happy to say that the
         <a href="/tagbox/demo">demo</a> still works great, untouched for over
-        a&nbsp;decade.
+        a&nbsp;decade and a half.
       </dd>
     </dl>
 
@@ -55,7 +55,7 @@
 
     <p class="footnote">
       This project is very old, and at least partially broken. It would need
-      some love to be useful&nbsp;again.
+      some attention to be useful&nbsp;again.
     </p>
   </main>
 </body>
