Link to main.bash from the projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -31,6 +31,11 @@
         Write HTML, display it as&nbsp;Markdown.
       </dd>
 
+      <dt><a href="https://github.com/rfletcher/main.bash">main.bash</a></dt>
+      <dd>
+        A tiny framework for bash scripts.
+      </dd>
+
       <dt class="stale"><a href="https://github.com/rfletcher/plex-mlb">Plex-MLB</a></dt>
       <dd>
         Watch live baseball games in <a href="https://plex.tv">Plex</a> (for
